--- a/Artcile_1/Article_1_Practical Langchain DEMO.ipynb
+++ b/Artcile_1/Article_1_Practical Langchain DEMO.ipynb
@@ -1,55 +1,46 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": []
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
-      "source": [],
       "metadata": {
         "id": "XNfBc2JDlibU"
-      }
+      },
+      "source": []
     },
     {
       "cell_type": "markdown",
-      "source": [],
       "metadata": {
         "id": "WAtl_HcTli3a"
-      }
+      },
+      "source": []
     },
     {
       "cell_type": "code",
-      "source": [
-        "!pip -q install -U langchain langchain-google-genai langchain-community duckduckgo-search"
-      ],
+      "execution_count": 1,
       "metadata": {
         "id": "i8EUw0UxljIr"
       },
-      "execution_count": 1,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "!pip -q install -U langchain langchain-google-genai langchain-community duckduckgo-search"
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "1) Setup LLM and Tool"
-      ],
       "metadata": {
         "id": "vExtSzaUlxJc"
-      }
+      },
+      "source": [
+        "1) Setup LLM and Tool"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "BhOTHXz4llpd"
+      },
+      "outputs": [],
       "source": [
         "import os\n",
         "from langchain_google_genai import ChatGoogleGenerativeAI\n",
@@ -58,61 +49,50 @@
         "from langchain.chains import LLMChain, SequentialChain\n",
         "\n",
         "# put your key here or in colab env\n",
-        "os.environ[\"GOOGLE_API_KEY\"] = \"AIzaSyBEhOoTh2Iu2UzC1p8Kfz8pL4FxGQP1F_w\"\n",
+        "os.environ[\"GOOGLE_API_KEY\"] = \"your_api_key_here\"\n",
         "\n",
         "# use the free model ✅\n",
         "llm = ChatGoogleGenerativeAI(model=\"gemini-1.5-flash\")\n",
         "\n",
         "# search tool\n",
         "search = DuckDuckGoSearchResults()\n"
-      ],
-      "metadata": {
-        "id": "BhOTHXz4llpd"
-      },
-      "execution_count": 2,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "2) Step A – Extract fact with search"
-      ],
       "metadata": {
         "id": "2n8bbKGNl0EF"
-      }
+      },
+      "source": [
+        "2) Step A – Extract fact with search"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 3,
+      "metadata": {
+        "id": "uVuJRx-7l2SZ"
+      },
+      "outputs": [],
       "source": [
         "def get_fact(query):\n",
         "    \"\"\"Search the web and return first snippet text.\"\"\"\n",
         "    results = search.invoke(query)\n",
         "    return results[:500]  # take first part only\n"
-      ],
-      "metadata": {
-        "id": "uVuJRx-7l2SZ"
-      },
-      "execution_count": 3,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "3) Step B – Generate code"
-      ],
       "metadata": {
         "id": "d8WgwpR8l3vl"
-      }
+      },
+      "source": [
+        "3) Step B – Generate code"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "code_prompt = ChatPromptTemplate.from_template(\n",
-        "    \"Write a {language} program that prints exactly this string: \\\"{fact}\\\".\"\n",
-        ")\n",
-        "\n",
-        "code_chain = LLMChain(llm=llm, prompt=code_prompt)\n"
-      ],
+      "execution_count": 4,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -120,29 +100,40 @@
         "id": "rPmRxtxbl6QZ",
         "outputId": "0fbef762-eee3-47d4-df65-3cf96b8d0d11"
       },
-      "execution_count": 4,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stderr",
+          "output_type": "stream",
           "text": [
             "/tmp/ipython-input-3404827593.py:5: LangChainDeprecationWarning: The class `LLMChain` was deprecated in LangChain 0.1.17 and will be removed in 1.0. Use :meth:`~RunnableSequence, e.g., `prompt | llm`` instead.\n",
             "  code_chain = LLMChain(llm=llm, prompt=code_prompt)\n"
           ]
         }
+      ],
+      "source": [
+        "code_prompt = ChatPromptTemplate.from_template(\n",
+        "    \"Write a {language} program that prints exactly this string: \\\"{fact}\\\".\"\n",
+        ")\n",
+        "\n",
+        "code_chain = LLMChain(llm=llm, prompt=code_prompt)\n"
       ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "4) Combine: User → Search → Code"
-      ],
       "metadata": {
         "id": "HxwXA8FImBld"
-      }
+      },
+      "source": [
+        "4) Combine: User → Search → Code"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 5,
+      "metadata": {
+        "id": "AUaNlb7_mB_8"
+      },
+      "outputs": [],
       "source": [
         "def pipeline(instruction, language):\n",
         "    # 1. Search fact\n",
@@ -151,29 +142,20 @@
         "    # 2. Generate code\n",
         "    code = code_chain.run(language=language, fact=fact)\n",
         "    return fact, code\n"
-      ],
-      "metadata": {
-        "id": "AUaNlb7_mB_8"
-      },
-      "execution_count": 5,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "5) Run Example"
-      ],
       "metadata": {
         "id": "wScgQomamD1B"
-      }
+      },
+      "source": [
+        "5) Run Example"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "fact, code = pipeline(\"capital of France\", \"Python\")\n",
-        "print(\"Fact snippet:\\n\", fact[:200], \"\\n\")\n",
-        "print(\"Generated Code:\\n\", code)\n"
-      ],
+      "execution_count": 6,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -181,11 +163,10 @@
         "id": "HGileuaGmGRz",
         "outputId": "67355dd7-d492-4fc2-cb8f-92f18e7551b4"
       },
-      "execution_count": 6,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stderr",
+          "output_type": "stream",
           "text": [
             "/usr/local/lib/python3.12/dist-packages/langchain_community/utilities/duckduckgo_search.py:63: RuntimeWarning: This package (`duckduckgo_search`) has been renamed to `ddgs`! Use `pip install ddgs` instead.\n",
             "  with DDGS() as ddgs:\n",
@@ -254,8 +235,8 @@
           ]
         },
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Fact snippet:\n",
             " snippet: May 4, 2014 · 在会计的概念里Asset是指公司可以控制的所有资源，控制不代表拥有，所以Asset=Libility+Equity，不仅仅包 …, title: 资产（Asset）和资本（Capital）区别在哪里？ - 知乎, link: https://www.zhihu.com/question/20514030, snippet: 如何评价天壹资本（Skycu \n",
@@ -268,8 +249,8 @@
           ]
         },
         {
-          "output_type": "stream",
           "name": "stderr",
+          "output_type": "stream",
           "text": [
             "/usr/local/lib/python3.12/dist-packages/jupyter_client/session.py:151: DeprecationWarning: datetime.datetime.utcnow() is deprecated and scheduled for removal in a future version. Use timezone-aware objects to represent datetimes in UTC: datetime.datetime.now(datetime.UTC).\n",
             "  return datetime.utcnow().replace(tzinfo=utc)\n",
@@ -281,24 +262,25 @@
             "  return datetime.utcnow().replace(tzinfo=utc)\n"
           ]
         }
+      ],
+      "source": [
+        "fact, code = pipeline(\"capital of France\", \"Python\")\n",
+        "print(\"Fact snippet:\\n\", fact[:200], \"\\n\")\n",
+        "print(\"Generated Code:\\n\", code)\n"
       ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "6) Try another"
-      ],
       "metadata": {
         "id": "7vgyjf1VmIFW"
-      }
+      },
+      "source": [
+        "6) Try another"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "fact, code = pipeline(\"currency of Japan\", \"JavaScript\")\n",
-        "print(\"Fact snippet:\\n\", fact[:200], \"\\n\")\n",
-        "print(\"Generated Code:\\n\", code)\n"
-      ],
+      "execution_count": 7,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -306,11 +288,10 @@
         "id": "BglwMjDgmJtv",
         "outputId": "644e4545-f847-4caa-9d9f-0e2854f66d24"
       },
-      "execution_count": 7,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stderr",
+          "output_type": "stream",
           "text": [
             "/usr/local/lib/python3.12/dist-packages/jupyter_client/session.py:151: DeprecationWarning: datetime.datetime.utcnow() is deprecated and scheduled for removal in a future version. Use timezone-aware objects to represent datetimes in UTC: datetime.datetime.now(datetime.UTC).\n",
             "  return datetime.utcnow().replace(tzinfo=utc)\n",
@@ -425,8 +406,8 @@
           ]
         },
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Fact snippet:\n",
             " snippet: 人民币缩写RMB和CNY有3点不同： 一、两者的实质不同： 1、RMB的实质：指 中国人民银行 发行的货币。 2、CNY的实 …, title: 人民币缩写“RMB”和“CNY”有什么区别_百度知道, link: https://zhidao.baidu.com/question/564292037.html, snippet: CAF：CURRENCY ADJUST FACTO \n",
@@ -442,8 +423,8 @@
           ]
         },
         {
-          "output_type": "stream",
           "name": "stderr",
+          "output_type": "stream",
           "text": [
             "/usr/local/lib/python3.12/dist-packages/jupyter_client/session.py:151: DeprecationWarning: datetime.datetime.utcnow() is deprecated and scheduled for removal in a future version. Use timezone-aware objects to represent datetimes in UTC: datetime.datetime.now(datetime.UTC).\n",
             "  return datetime.utcnow().replace(tzinfo=utc)\n",
@@ -455,7 +436,26 @@
             "  return datetime.utcnow().replace(tzinfo=utc)\n"
           ]
         }
+      ],
+      "source": [
+        "fact, code = pipeline(\"currency of Japan\", \"JavaScript\")\n",
+        "print(\"Fact snippet:\\n\", fact[:200], \"\\n\")\n",
+        "print(\"Generated Code:\\n\", code)\n"
       ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
